[package]
name = "pallet-evm-test-vector-support"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "Test vector support for EVM pallet."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
evm = { workspace = true, features = ["with-codec"], default-features = false }
hex = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }
# Substrate
sp-core = { workspace = true, features = ["default"], default-features = false }
# Frontier
fp-evm = { workspace = true, features = ["default"], default-features = false }
