[package]
name = "pallet-evm-precompile-bls12377"
version = "1.0.0-dev"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
# Arkworks
ark-bls12-377 = { workspace = true, default-features = false }
ark-ec = { workspace = true, default-features = false }
ark-ff = { workspace = true, default-features = false }
ark-std = { workspace = true, default-features = false }

# Frontier
fp-evm = { workspace = true, default-features = false }
paste = { workspace = true, default-features = false }

[dev-dependencies]
# Frontier
pallet-evm-test-vector-support = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	# Arkworks
	"ark-bls12-377/std",
	"ark-ec/std",
	"ark-ff/std",
	"ark-std/std",

	# Frontier
	"fp-evm/std",
]
