[package]
name = "pallet-evm-precompile-bn128"
version = "2.0.0-dev"
license = "Apache-2.0"
description = "BN128 precompiles for EVM pallet."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
bn = { workspace = true, default-features = false }
# Substrate
sp-core = { workspace = true, default-features = false }
# Frontier
fp-evm = { workspace = true, default-features = false }

[dev-dependencies]
# Frontier
pallet-evm-test-vector-support = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	# Substrate
	"sp-core/std",
	# Frontier
	"fp-evm/std",
]
